# portfolio-web

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/: LICENSE  README.md
.github/workflows/: ci.yaml  rust-clippy.yml
backend/: Cargo.toml  README.md
backend/src/: app.rs
backend/src/controllers/: healthcheck.rs  mod.rs
backend/src/controllers/structures/: education.rs  job.rs  mod.rs  project.rs  skill.rs  testimonial.rs
backend/tests/requests/: home.rs
config/: development.yaml  production.yaml  test.yaml
docs/designs/: version2.mmd  version3.mmd
frontend/: Cargo.toml
frontend/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/base/: mod.rs
src/: lib.rs  traits.rs
src/base/: content.rs  entity.rs  object_store_ref.rs
src/models/: traits.rs
src/models/base/: content.rs  entity.rs
src/models/structs/: asset.rs  blog.rs  company.rs  education.rs  job.rs  project.rs  skill.rs  testimonial.rs
src/structs/: asset.rs  blog.rs  company.rs  education.rs  job.rs  mod.rs  project.rs  skill.rs  testimonial.rs
