[package]
name = "backend"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "backend"

[dependencies]
loco-rs = { version = "0.16.3", default-features = false, features = ["cli", "bg_redis"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1.74" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }

[[bin]]
name = "backend"
path = "src/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { version = "0.16.3", default-features = false, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.26.1" }
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
